main/default/objects/Issue__c/fields/Date_Raised_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Date_Raised_Formatted__c</fullName>
    <formula>CASE(MONTH( Date_Raised__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;
)&amp; &quot; &quot; &amp;
TEXT(DAY( Date_Raised__c  )) &amp; &quot;, &quot; &amp; TEXT(YEAR(Date_Raised__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Raised Formatted</label>
    <type>Text</type>
</CustomField>