main/default/objects/Issue__c/fields/Email_Logo_URL2__c.field-meta.xml
<CustomField>
    <fullName>Email_Logo_URL2__c</fullName>
    <formula>Event__r.Email_Logo_URL2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Logo URL2</label>
    <type>Text</type>
</CustomField>