main/default/objects/Issue__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1)</fullName>
            </value>
            <value>
                <fullName>(2)</fullName>
            </value>
            <value>
                <fullName>(3)</fullName>
            </value>
            <value>
                <fullName>(4)</fullName>
            </value>
            <value>
                <fullName>(5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>