main/default/objects/Issue__c/fields/Issue_Page_URL_c__c.field-meta.xml
<CustomField>
    <fullName>Issue_Page_URL_c__c</fullName>
    <label>Issue_Page_URL__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>