main/default/objects/Issue__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Project_Issues1</relationshipName>
    <type>Lookup</type>
</CustomField>