main/default/objects/Issue__c/fields/Raised_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Raised_By_Email__c</fullName>
    <label>Raised By Email</label>
    <type>Email</type>
</CustomField>