main/default/objects/Issue__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Session</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a session that exists on the selected event</errorMessage>
        <filterItems>
            <field>$Source.Event__c</field>
            <operation>equals</operation>
            <valueField>Session__c.Event__c</valueField>
        </filterItems>
        <filterItems>
            <field>Session__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>