main/default/objects/Issue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domain Access Issue/User Sign-on Issues</fullName>
            </value>
            <value>
                <fullName>Domain Issue Impacting Workbook Execution</fullName>
            </value>
            <value>
                <fullName>Workflow Issue</fullName>
            </value>
            <value>
                <fullName>Hardware Issue</fullName>
            </value>
            <value>
                <fullName>Training Room Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>