main/default/objects/Issue__c/validationRules/DescriptionFieldIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DescriptionFieldIsRequired</fullName>
    <active>false</active>
    <description>The description field is mandatory to prevent blank descriptions on Issue records. So that the Issue Tracker page renders successfully.</description>
    <errorConditionFormula>ISBLANK( Description__c )</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Description is required.</errorMessage>
</ValidationRule>